<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/yw_llWindPressure"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#B2000000"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yw_wind_pressure_title"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/yw_height_percent_5" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/yw_height_percent_5"
                android:contentDescription="@string/yw_content_description"
                android:src="@drawable/yw_bigpole" />

            <ImageView
                android:id="@+id/yw_ivWindPressure_BigWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/yw_content_description"
                android:src="@drawable/yw_blade_big" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/yw_width_percent_3p5"
            android:layout_marginTop="@dimen/yw_height_percent_3" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/yw_height_percent_3"
                android:contentDescription="@string/yw_content_description"
                android:src="@drawable/yw_smallpole" />

            <ImageView
                android:id="@+id/yw_ivWindPressure_SmallWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/yw_content_description"
                android:src="@drawable/yw_blade_s" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/yw_content_description"
                    android:src="@drawable/yw_wind" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yw_wind_wind"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/yw_tvWindPressure_Wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>