<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/yw_imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/yw_content_description"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:id="@+id/yw_rlSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/yw_height_percent_10"
        android:layout_alignParentTop="true"
        android:background="#B2000000"
        android:orientation="horizontal"
        android:padding="5dp" >

        <RelativeLayout
            android:layout_width="@dimen/yw_width_percent_16"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_width="@dimen/yw_width_percent_8"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/yw_content_description"
                android:src="@drawable/yw_logo" />

            <TextView
                android:id="@+id/yw_tvLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/yw_height_percent_5"
                android:text="@string/yw_logo"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/yw_width_percent_2"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <com.yahooweather.view.CustomAutoCompleteTextView
                android:id="@+id/yw_edtSearch"
                android:layout_width="@dimen/yw_width_percent_47"
                android:layout_height="@dimen/yw_height_percent_5"
                android:background="#FFFFFF"
                android:dropDownSelector="#cacaca"
                android:hint="@string/yw_search_hint"
                android:inputType="text"
                android:padding="5dp" >
            </com.yahooweather.view.CustomAutoCompleteTextView>

            <Button
                android:id="@+id/yw_btnSearch"
                android:layout_width="100dp"
                android:layout_height="@dimen/yw_height_percent_5p2"
                android:layout_marginLeft="10dp"
                android:background="@drawable/yw_search_btn"
                android:text="@string/yw_search_btn"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/yw_rlSearch" >

        <RelativeLayout
            android:id="@+id/yw_rlLeft"
            android:layout_width="@dimen/yw_width_percent_10"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B2000000"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/yw_tvMyLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yw_my_location"
                    android:textColor="#a3d2ff"
                    android:textSize="15sp" />

                <FrameLayout
                    android:id="@+id/yw_flMyLocation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/yw_height_percent_20" >
                </FrameLayout>
            </LinearLayout>
        </RelativeLayout>

        <com.yahooweather.view.EnhancedScrollView
            android:id="@+id/yw_svCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/yw_llRight"
            android:layout_toRightOf="@id/yw_rlLeft"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:orientation="vertical">

                <!-- Location Infor -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <FrameLayout
                        android:id="@+id/yw_flLocationInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <!-- Location Temp -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <FrameLayout
                        android:id="@+id/yw_flLocationTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!-- Forecast and Monthly Trends -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false" >

                    <FrameLayout
                        android:id="@+id/yw_flForecast"
                        android:layout_width="@dimen/yw_width_percent_27"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />

                    <FrameLayout
                        android:id="@+id/yw_flPhotos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <!-- Details -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/yw_height_percent_1" >

                    <FrameLayout
                        android:id="@+id/yw_flDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!-- Sun & Moon + Wind & Pressure -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:paddingTop="@dimen/yw_height_percent_1" >

                    <FrameLayout
                        android:id="@+id/yw_flSunMoon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4" />

                    <FrameLayout
                        android:id="@+id/yw_flWinPressure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.4" />
                </LinearLayout>
            </LinearLayout>
        </com.yahooweather.view.EnhancedScrollView>

        <LinearLayout
            android:id="@+id/yw_llRight"
            android:layout_width="@dimen/yw_width_percent_10"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="More from The Weather Channel®" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>